--- a/MyOwnWebServer/MyOwnWebServer/MyOwnWebServer.csproj
+++ b/MyOwnWebServer/MyOwnWebServer/MyOwnWebServer.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileHandler.cs" />
     <Compile Include="HttpHandler.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="WebServer.cs" />
